Fix black backgrounds in rendered transparent PNGs; fix stretched non-square images in rendered product view

--- a/src/styles/customizer/RenderedProductView.module.css
+++ b/src/styles/customizer/RenderedProductView.module.css
@@ -9,8 +9,8 @@
 }
 
 .main img {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .main .img-loading {
